@@ -4,10 +4,13 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.chat.messages.AssistantMessage;
 import org.springframework.ai.chat.messages.ToolResponseMessage;
+import org.springframework.ai.chat.model.ToolContext;
 import org.springframework.ai.tool.ToolCallback;
 import vip.mate.tool.builtin.ToolExecutionContext;
 import vip.mate.agent.AgentToolSet;
 import vip.mate.agent.GraphEventPublisher;
+import vip.mate.agent.context.ChatOrigin;
+import vip.mate.agent.graph.state.DirectToolOutput;
 import vip.mate.approval.ApprovalWorkflowService;
 import vip.mate.channel.web.ChatStreamTracker;
 import vip.mate.tool.guard.ToolExecutionGuardHelper;
@@ -38,25 +41,53 @@ import java.util.concurrent.*;
 public class ToolExecutionExecutor {
 
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
-    private static final ExecutorService TOOL_EXECUTOR = Executors.newFixedThreadPool(
-            Math.max(4, Runtime.getRuntime().availableProcessors()),
-            r -> {
-                Thread t = new Thread(r, "tool-executor");
-                t.setDaemon(true);
-                return t;
-            });
+    // JDK 21 virtual threads: no blocking stall for I/O-bound tools.
+    // Each tool invocation gets its own lightweight carrier thread.
+    // Named threads (matching HookDispatcher convention) for log traceability.
+    private static final ExecutorService TOOL_EXECUTOR =
+            Executors.newThreadPerTaskExecutor(
+                    Thread.ofVirtual().name("tool-executor-", 0).factory());
 
-    /** 默认不安全工具列表（写操作、浏览器交互等） */
+    /**
+     * Legacy hardcoded unsafe set, kept as a fallback when no
+     * {@link vip.mate.tool.ToolConcurrencyRegistry} is wired in (legacy tests,
+     * backwards-compatible constructors). New code should annotate the tool
+     * method with {@link vip.mate.tool.ConcurrencyUnsafe} instead of editing
+     * this list.
+     */
     private static final Set<String> DEFAULT_UNSAFE_TOOLS = Set.of(
             "browser_use", "BrowserUseTool", "write_file", "edit_file"
     );
 
-    /** 工具结果最大字符数（防止超长结果膨胀 ToolResponseMessage → 撑爆 LLM 上下文） */
+    /**
+     * Layer 1 — hard truncation cap applied to every tool result before it
+     * reaches ToolResultStorage (Layer 2 spill) or the LLM prompt.
+     *
+     * <p>Two-level budget chain (RFC-008 / RFC-06 D-5):
+     * <pre>
+     *   raw tool result
+     *     → truncateToolResult(..., MAX_TOOL_RESULT_CHARS=8000)   // Layer 1: hard cap
+     *     → persistIfOversized(..., perResultThresholdChars=16000) // Layer 2: spill to disk
+     *     → enforceTurnBudget(..., perTurnBudgetChars=32000)      // Layer 3: per-turn aggregate
+     * </pre>
+     * Layer 1 runs first and is intentionally kept at 8000 to prevent oversized
+     * results from inflating the prompt. Layers 2/3 thresholds are configured in
+     * {@link ToolResultProperties} and application.yml.
+     */
     private static final int MAX_TOOL_RESULT_CHARS = 8000;
 
     /** 尾部错误模式检测 */
     private static final java.util.regex.Pattern ERROR_TAIL_PATTERN = java.util.regex.Pattern.compile(
             "(?i)\\b(error|exception|traceback|failed|fatal|panic|stack.?trace|errno)\\b");
+
+    /**
+     * RFC-052 §2.4: placeholder written into {@code ToolResponseMessage.content}
+     * for returnDirect tools. Intentionally English, short, and free of any
+     * tool-specific data so it is safe to enter prompt cache and gives the LLM
+     * a clear signal that the tool ran (vs failed).
+     */
+    static final String DIRECT_TOOL_PLACEHOLDER =
+            "[Tool result returned directly to user. Content withheld from model context per tool policy.]";
 
     /**
      * 智能截断工具结果：检测尾部是否含错误信息，动态调整 head/tail 比例。
@@ -88,16 +119,35 @@ public class ToolExecutionExecutor {
     private final ApprovalWorkflowService approvalService;
     private final ChatStreamTracker streamTracker;
     private final vip.mate.config.ToolTimeoutProperties toolTimeoutProperties;
+    /** RFC-008 Phase 3 spill store; nullable so legacy constructors keep working. */
+    private final ToolResultStorage resultStorage;
+    /** RFC-008 Phase 4 metadata-driven concurrency classifier; nullable for legacy constructors. */
+    private final vip.mate.tool.ToolConcurrencyRegistry concurrencyRegistry;
 
     public ToolExecutionExecutor(AgentToolSet toolSet, ToolGuardService toolGuardService,
                                   ApprovalWorkflowService approvalService, ChatStreamTracker streamTracker) {
-        this(toolSet, toolGuardService, null, approvalService, streamTracker, null);
+        this(toolSet, toolGuardService, null, approvalService, streamTracker, null, null, null);
     }
 
     public ToolExecutionExecutor(AgentToolSet toolSet, ToolGuardService toolGuardService,
                                   ApprovalWorkflowService approvalService, ChatStreamTracker streamTracker,
                                   vip.mate.config.ToolTimeoutProperties toolTimeoutProperties) {
-        this(toolSet, toolGuardService, null, approvalService, streamTracker, toolTimeoutProperties);
+        this(toolSet, toolGuardService, null, approvalService, streamTracker, toolTimeoutProperties, null, null);
+    }
+
+    public ToolExecutionExecutor(AgentToolSet toolSet, ToolGuardService toolGuardService,
+                                  ApprovalWorkflowService approvalService, ChatStreamTracker streamTracker,
+                                  vip.mate.config.ToolTimeoutProperties toolTimeoutProperties,
+                                  ToolResultStorage resultStorage) {
+        this(toolSet, toolGuardService, null, approvalService, streamTracker, toolTimeoutProperties, resultStorage, null);
+    }
+
+    public ToolExecutionExecutor(AgentToolSet toolSet, ToolGuardService toolGuardService,
+                                  ApprovalWorkflowService approvalService, ChatStreamTracker streamTracker,
+                                  vip.mate.config.ToolTimeoutProperties toolTimeoutProperties,
+                                  ToolResultStorage resultStorage,
+                                  vip.mate.tool.ToolConcurrencyRegistry concurrencyRegistry) {
+        this(toolSet, toolGuardService, null, approvalService, streamTracker, toolTimeoutProperties, resultStorage, concurrencyRegistry);
     }
 
     public ToolExecutionExecutor(AgentToolSet toolSet, ToolGuard toolGuard,
@@ -108,18 +158,24 @@ public class ToolExecutionExecutor {
         this.approvalService = approvalService;
         this.streamTracker = streamTracker;
         this.toolTimeoutProperties = null;
+        this.resultStorage = null;
+        this.concurrencyRegistry = null;
     }
 
     private ToolExecutionExecutor(AgentToolSet toolSet, ToolGuardService toolGuardService,
                                    ToolGuard toolGuard, ApprovalWorkflowService approvalService,
                                    ChatStreamTracker streamTracker,
-                                   vip.mate.config.ToolTimeoutProperties toolTimeoutProperties) {
+                                   vip.mate.config.ToolTimeoutProperties toolTimeoutProperties,
+                                   ToolResultStorage resultStorage,
+                                   vip.mate.tool.ToolConcurrencyRegistry concurrencyRegistry) {
         this.toolCallbackMap = toolSet.callbackByName();
         this.toolGuardService = toolGuardService;
         this.toolGuard = toolGuard;
         this.approvalService = approvalService;
         this.streamTracker = streamTracker;
         this.toolTimeoutProperties = toolTimeoutProperties;
+        this.resultStorage = resultStorage;
+        this.concurrencyRegistry = concurrencyRegistry;
     }
 
     private long getToolTimeoutMs(String toolName) {
@@ -144,11 +200,6 @@ public class ToolExecutionExecutor {
         return execute(toolCalls, conversationId, agentId, isReplay, "");
     }
 
-    /** 当前执行的 requesterId，传递给 ToolExecutionContext */
-    private volatile String currentRequesterId;
-    /** 当前工作区活动目录（为空不限制），传递给 ToolExecutionContext */
-    private volatile String currentWorkspaceBasePath;
-
     public ToolExecutionResult execute(List<AssistantMessage.ToolCall> toolCalls,
                                         String conversationId, String agentId,
                                         boolean isReplay, String requesterId) {
@@ -159,10 +210,43 @@ public class ToolExecutionExecutor {
                                         String conversationId, String agentId,
                                         boolean isReplay, String requesterId,
                                         String workspaceBasePath) {
-        this.currentRequesterId = requesterId;
-        this.currentWorkspaceBasePath = workspaceBasePath;
+        return execute(toolCalls, conversationId, agentId, isReplay, requesterId,
+                workspaceBasePath, ChatOrigin.EMPTY);
+    }
+
+    /**
+     * RFC-063r §2.5: preferred overload — accepts a {@link ChatOrigin} that the
+     * top-level agent has enriched with agentId/workspace/channel context.
+     * Builds a Spring AI {@link ToolContext} per tool invocation so
+     * {@code @Tool} methods can read the origin via
+     * {@code ChatOrigin.from(toolContext)}.
+     *
+     * <p>During the PR-1 transition the legacy {@link ToolExecutionContext}
+     * ThreadLocal is also populated, so existing tools that read from it keep
+     * working unchanged. After all 8 callsites migrate, the ThreadLocal can be
+     * removed.
+     *
+     * <p><b>Thread safety</b>: this executor instance is shared across all
+     * concurrent invocations of a single agent (one executor per agent, per
+     * {@code AgentGraphBuilder.build}). Origin / requester / workspace are
+     * therefore <em>method-local</em> — they live as parameters all the way
+     * down into {@link PreparedToolCall} and never touch instance state. An
+     * earlier draft used {@code volatile} fields here; concurrent users hitting
+     * the same agent (Web + IM at once) raced on those fields and the channel
+     * binding was occasionally cross-contaminated. Do not reintroduce the
+     * fields — pass via parameters.
+     */
+    public ToolExecutionResult execute(List<AssistantMessage.ToolCall> toolCalls,
+                                        String conversationId, String agentId,
+                                        boolean isReplay, String requesterId,
+                                        String workspaceBasePath,
+                                        ChatOrigin origin) {
+        ChatOrigin safeOrigin = origin != null ? origin : ChatOrigin.EMPTY;
         List<ToolResponseMessage.ToolResponse> allResponses = new ArrayList<>();
         List<GraphEventPublisher.GraphEvent> events = Collections.synchronizedList(new ArrayList<>());
+        // RFC-052: accumulate full-text outputs from returnDirect tools so the
+        // graph can route to FinalAnswerNode without re-entering the LLM.
+        List<DirectToolOutput> directOutputs = Collections.synchronizedList(new ArrayList<>());
 
         events.add(GraphEventPublisher.phase("action", Map.of("toolCount", toolCalls.size())));
 
@@ -175,7 +259,7 @@ public class ToolExecutionExecutor {
             String toolName = toolCall.name();
             String arguments = toolCall.arguments();
 
-            events.add(GraphEventPublisher.toolStart(toolName, arguments));
+            events.add(GraphEventPublisher.toolStart(toolCall.id(), toolName, arguments));
 
             // 0. 子会话工具拦截：委派上下文中的子 Agent 禁止调用特定工具
             if (vip.mate.tool.builtin.DelegationContext.currentDepth() > 0) {
@@ -183,7 +267,7 @@ public class ToolExecutionExecutor {
                 if (denied.contains(toolName)) {
                     String msg = "[安全限制] 子 Agent 不允许使用工具: " + toolName;
                     log.info("[ToolExecutor] Child agent blocked from using tool: {}", toolName);
-                    events.add(GraphEventPublisher.toolComplete(toolName, msg, false));
+                    events.add(GraphEventPublisher.toolComplete(toolCall.id(), toolName, msg, false));
                     allResponses.add(new org.springframework.ai.chat.messages.ToolResponseMessage.ToolResponse(
                             toolCall.id(), toolName, msg));
                     continue;
@@ -198,7 +282,7 @@ public class ToolExecutionExecutor {
                     log.warn("[ToolExecutor] Tool {} arguments invalid/truncated JSON (len={}): {}",
                             toolName, arguments.length(), jsonEx.getMessage());
                     String truncationError = normalizeToolExecutionError(jsonEx);
-                    events.add(GraphEventPublisher.toolComplete(toolName, truncationError, false));
+                    events.add(GraphEventPublisher.toolComplete(toolCall.id(), toolName, truncationError, false));
                     allResponses.add(new ToolResponseMessage.ToolResponse(
                             toolCall.id(), toolName, truncationError));
                     continue;
@@ -243,7 +327,7 @@ public class ToolExecutionExecutor {
             ToolCallback callback = toolCallbackMap.get(toolName);
             if (callback == null) {
                 log.warn("[ToolExecutor] Tool not found: {}", toolName);
-                events.add(GraphEventPublisher.toolComplete(toolName, "Tool not found: " + toolName, false));
+                events.add(GraphEventPublisher.toolComplete(toolCall.id(), toolName, "Tool not found: " + toolName, false));
                 allResponses.add(new ToolResponseMessage.ToolResponse(
                         toolCall.id(), toolName, "Tool not found: " + toolName));
                 continue;
@@ -252,64 +336,157 @@ public class ToolExecutionExecutor {
             // 4. 分类: concurrencySafe
             boolean safe = isConcurrencySafe(toolName);
             preparedCalls.add(new PreparedToolCall(toolCall, callback, arguments, safe, allResponses.size(),
-                    conversationId, currentRequesterId, currentWorkspaceBasePath));
+                    conversationId, requesterId, workspaceBasePath, safeOrigin));
             // 占位，Phase 2 填充
             allResponses.add(null);
         }
 
         // ═══ Phase 2: 分段并发执行 ═══
         if (!preparedCalls.isEmpty()) {
-            executePreparedCalls(preparedCalls, allResponses, events);
+            executePreparedCalls(preparedCalls, allResponses, events, directOutputs);
         }
 
-        // 清除 null 占位（不应该有，但防御性处理）
+        // Defensive: drop null placeholders (should never appear in practice).
         allResponses.removeIf(Objects::isNull);
+
+        // RFC-008 Phase 3 Layer 3: enforce per-turn aggregate budget across all
+        // tool responses for this assistant turn. Spills the largest non-spilled
+        // response in turn until the cumulative size fits the budget.
+        if (resultStorage != null && !allResponses.isEmpty()) {
+            allResponses = new ArrayList<>(resultStorage.enforceTurnBudget(
+                    allResponses, conversationId, workspaceBasePath));
+        }
 
         boolean hasApprovalPending = barrier != null;
         return new ToolExecutionResult(allResponses, events, hasApprovalPending,
                 barrier != null ? barrier.pendingId : null,
-                barrier != null ? barrier.toolName : null);
+                barrier != null ? barrier.toolName : null,
+                List.copyOf(directOutputs));
     }
 
     /**
-     * 执行预批准的工具调用（用于 StepExecutionNode 的 replay 路径）
+     * Execute a pre-approved tool call (used by StepExecutionNode's replay path
+     * after a user approves a previously-blocked invocation).
+     *
+     * @param conversationId required for per-conversation spill scoping; when
+     *     blank, spill files would land in a shared {@code unknown/} directory
+     *     and break per-conversation cleanup.
+     * @param workspaceBasePath optional; when blank, spill falls back to tmp.
      */
     public ToolResponseMessage.ToolResponse executePreApproved(
             AssistantMessage.ToolCall toolCall, String storedArguments,
-            List<GraphEventPublisher.GraphEvent> events) {
+            List<GraphEventPublisher.GraphEvent> events,
+            String conversationId, String workspaceBasePath) {
+        return executePreApproved(toolCall, storedArguments, events, conversationId,
+                workspaceBasePath, null);
+    }
+
+    /**
+     * RFC-052 PR-2: returnDirect-aware variant. When the pre-approved tool
+     * declares {@code returnDirect=true}, the result is captured into
+     * {@code directOutputs} (verbatim), the SSE consumer gets a
+     * {@code tool_direct_result} event, and the {@link ToolResponseMessage}
+     * carries the placeholder so any subsequent LLM call can never see the
+     * full payload.
+     *
+     * @param directOutputs nullable; pass-through for callers that don't track
+     *     direct outputs (kept for legacy compatibility).
+     */
+    public ToolResponseMessage.ToolResponse executePreApproved(
+            AssistantMessage.ToolCall toolCall, String storedArguments,
+            List<GraphEventPublisher.GraphEvent> events,
+            String conversationId, String workspaceBasePath,
+            List<DirectToolOutput> directOutputs) {
         String toolName = toolCall.name();
         String callArguments = storedArguments != null ? storedArguments : toolCall.arguments();
 
         ToolCallback callback = toolCallbackMap.get(toolName);
         if (callback == null) {
             log.warn("[ToolExecutor] Pre-approved tool not found: {}", toolName);
-            events.add(GraphEventPublisher.toolComplete(toolName, "Tool not found: " + toolName, false));
+            events.add(GraphEventPublisher.toolComplete(toolCall.id(), toolName, "Tool not found: " + toolName, false));
             return new ToolResponseMessage.ToolResponse(toolCall.id(), toolName, "Tool not found: " + toolName);
         }
 
         try {
             log.info("[ToolExecutor] Executing pre-approved tool: {}", toolName);
-            String result = callback.call(callArguments);
+            // RFC-063r §2.5: forward ToolContext so the pre-approved tool can
+            // still observe the originating ChatOrigin (channel/workspace).
+            // Origin is method-local (see thread-safety note on execute());
+            // the legacy ThreadLocal that used to carry it across executePreApproved
+            // calls was a cross-conversation footgun and has been removed.
+            ChatOrigin replayOrigin = ChatOrigin.EMPTY
+                    .withConversationId(conversationId)
+                    .withWorkspace(null, workspaceBasePath);
+            String result = callback.call(callArguments, replayOrigin.toToolContext());
             int rawLen = result != null ? result.length() : 0;
+
+            // RFC-052: pre-approved tool may itself be returnDirect — in that
+            // case its result must take the direct path (no spill, no LLM).
+            // Without this branch, an approved direct tool would leak its full
+            // content into the next LLM round-trip via the ToolResponseMessage.
+            if (isReturnDirect(callback)) {
+                String fullResult = result != null ? result : "";
+                log.info("[ToolExecutor] Pre-approved tool {} is returnDirect; bypassing " +
+                        "spill/truncate, broadcasting tool_direct_result ({} chars)", toolName, rawLen);
+                if (directOutputs != null) {
+                    directOutputs.add(new DirectToolOutput(
+                            toolCall.id(), toolName, fullResult, System.currentTimeMillis()));
+                }
+                events.add(GraphEventPublisher.toolDirectResult(
+                        toolCall.id(), toolName, fullResult));
+                return new ToolResponseMessage.ToolResponse(
+                        toolCall.id(), toolName, DIRECT_TOOL_PLACEHOLDER);
+            }
+
+            // Phase 3 Layer 2: spill before truncation when storage is wired.
+            // Use the caller-supplied conversationId so spill files inherit the
+            // same per-conversation directory layout as the non-replay path.
+            if (resultStorage != null && result != null) {
+                String spillConv = conversationId != null && !conversationId.isEmpty() ? conversationId : "unknown";
+                result = resultStorage.persistIfOversized(
+                        result, toolName, toolCall.id(), spillConv, workspaceBasePath);
+            }
             result = truncateToolResult(result, MAX_TOOL_RESULT_CHARS);
             log.info("[ToolExecutor] Pre-approved tool {} returned {} chars{}", toolName, rawLen,
-                    result != null && result.length() < rawLen ? " (truncated to " + result.length() + ")" : "");
-            events.add(GraphEventPublisher.toolComplete(toolName, result, true));
+                    result != null && result.length() < rawLen ? " (now " + result.length() + " after spill/truncate)" : "");
+            events.add(GraphEventPublisher.toolComplete(toolCall.id(), toolName, result, true));
             return new ToolResponseMessage.ToolResponse(
                     toolCall.id(), toolName, result != null ? result : "");
         } catch (Exception e) {
             log.error("[ToolExecutor] Pre-approved tool {} failed: {}", toolName, e.getMessage());
-            events.add(GraphEventPublisher.toolComplete(toolName, e.getMessage(), false));
-            return new ToolResponseMessage.ToolResponse(
-                    toolCall.id(), toolName, "Tool execution failed: " + e.getMessage());
+            String safeError = isReturnDirect(callback)
+                    ? "Tool execution failed (details withheld per returnDirect policy)"
+                    : "Tool execution failed: " + e.getMessage();
+            events.add(GraphEventPublisher.toolComplete(toolCall.id(), toolName, safeError, false));
+            return new ToolResponseMessage.ToolResponse(toolCall.id(), toolName, safeError);
         }
+    }
+
+    /**
+     * Backwards-compatible overload — replay spills land in a synthetic
+     * {@code unknown/} conversation bucket. New callers must use the
+     * {@link #executePreApproved(AssistantMessage.ToolCall, String, List, String, String)}
+     * variant so spill files are correctly scoped per conversation.
+     *
+     * @deprecated use the 5-arg overload with explicit {@code conversationId}
+     */
+    @Deprecated
+    public ToolResponseMessage.ToolResponse executePreApproved(
+            AssistantMessage.ToolCall toolCall, String storedArguments,
+            List<GraphEventPublisher.GraphEvent> events) {
+        // Workspace base path is no longer carried as instance state — legacy
+        // callers that don't supply one get unrestricted file access (matches
+        // pre-RFC behavior when WorkspacePathGuard.basePath was null).
+        return executePreApproved(toolCall, storedArguments, events, null, null);
     }
 
     // ==================== Phase 2: 并发执行 ====================
 
     private void executePreparedCalls(List<PreparedToolCall> preparedCalls,
                                        List<ToolResponseMessage.ToolResponse> allResponses,
-                                       List<GraphEventPublisher.GraphEvent> events) {
+                                       List<GraphEventPublisher.GraphEvent> events,
+                                       List<DirectToolOutput> directOutputs) {
+        long execStartMs = System.currentTimeMillis();
         if (!preparedCalls.isEmpty() && streamTracker != null) {
             String conversationId = preparedCalls.get(0).conversationId;
             String phase = classifyBatchPhase(preparedCalls);
@@ -325,13 +502,21 @@ public class ToolExecutionExecutor {
             if (batch.size() == 1) {
                 // 单个工具（safe 或 unsafe），直接执行
                 PreparedToolCall pc = batch.get(0);
-                ToolResponseMessage.ToolResponse response = executeSingleTool(pc, events);
+                ToolResponseMessage.ToolResponse response = executeSingleTool(pc, events, directOutputs);
                 allResponses.set(pc.resultIndex, response);
             } else {
                 // 多个 safe 工具，并行执行
-                executeParallelBatch(batch, allResponses, events);
+                executeParallelBatch(batch, allResponses, events, directOutputs);
             }
         }
+
+        // D-6: emit tool execution perf summary
+        long toolExecMs = System.currentTimeMillis() - execStartMs;
+        events.add(GraphEventPublisher.perfSummary("tool_execution", Map.of(
+                "tool_exec_ms", toolExecMs,
+                "tool_count", preparedCalls.size(),
+                "batch_count", batches.size()
+        )));
     }
 
     /**
@@ -365,7 +550,8 @@ public class ToolExecutionExecutor {
 
     private void executeParallelBatch(List<PreparedToolCall> batch,
                                        List<ToolResponseMessage.ToolResponse> allResponses,
-                                       List<GraphEventPublisher.GraphEvent> events) {
+                                       List<GraphEventPublisher.GraphEvent> events,
+                                       List<DirectToolOutput> directOutputs) {
         log.info("[ToolExecutor] Executing {} safe tools in parallel: {}",
                 batch.size(), batch.stream().map(pc -> pc.toolCall.name()).toList());
         long batchStartMs = System.currentTimeMillis();
@@ -373,7 +559,7 @@ public class ToolExecutionExecutor {
         Map<Integer, CompletableFuture<ToolResponseMessage.ToolResponse>> futures = new LinkedHashMap<>();
         for (PreparedToolCall pc : batch) {
             CompletableFuture<ToolResponseMessage.ToolResponse> future =
-                    CompletableFuture.supplyAsync(() -> executeSingleTool(pc, events), TOOL_EXECUTOR);
+                    CompletableFuture.supplyAsync(() -> executeSingleTool(pc, events, directOutputs), TOOL_EXECUTOR);
             futures.put(pc.resultIndex, future);
         }
 
@@ -404,50 +590,99 @@ public class ToolExecutionExecutor {
     }
 
     private ToolResponseMessage.ToolResponse executeSingleTool(PreparedToolCall pc,
-                                                                List<GraphEventPublisher.GraphEvent> events) {
+                                                                List<GraphEventPublisher.GraphEvent> events,
+                                                                List<DirectToolOutput> directOutputs) {
         String toolName = pc.toolCall.name();
         try {
             if (streamTracker != null) {
                 streamTracker.updateRunningTool(pc.conversationId, toolName);
                 streamTracker.broadcastObject(pc.conversationId, GraphEventPublisher.EVENT_TOOL_START,
-                        GraphEventPublisher.toolStart(toolName, pc.arguments).data());
+                        GraphEventPublisher.toolStart(pc.toolCall.id(), toolName, pc.arguments).data());
             }
             log.info("[ToolExecutor] Executing tool: {} with args: {}",
                     toolName, pc.arguments != null && pc.arguments.length() > 200
                             ? pc.arguments.substring(0, 200) + "..." : pc.arguments);
 
-            // 注入工具执行上下文（供 VideoGenerateTool 等获取 conversationId / username / workspaceBasePath）
+            // RFC-063r §2.5 / PR-1 transition window: populate BOTH the explicit
+            // Spring AI ToolContext (preferred — read via ChatOrigin.from(ctx))
+            // AND the legacy ToolExecutionContext ThreadLocal so tools that have
+            // not yet migrated to ToolContext keep working unchanged.
             ToolExecutionContext.set(pc.conversationId, pc.requesterId, pc.workspaceBasePath);
             String result;
             try {
-                result = pc.callback.call(pc.arguments);
+                ChatOrigin runtimeOrigin = pc.origin != null ? pc.origin : ChatOrigin.EMPTY;
+                runtimeOrigin = runtimeOrigin
+                        .withConversationId(pc.conversationId)
+                        .withWorkspace(runtimeOrigin.workspaceId(), pc.workspaceBasePath);
+                ToolContext toolContext = runtimeOrigin.toToolContext();
+                result = pc.callback.call(pc.arguments, toolContext);
             } finally {
                 ToolExecutionContext.clear();
             }
 
             int rawLen = result != null ? result.length() : 0;
+            // RFC-052: returnDirect tools bypass spill / truncation / LLM context.
+            // Their full text goes to the user verbatim and is never persisted to
+            // a workspace cache file (spill could leak sensitive data).
+            if (isReturnDirect(pc.callback)) {
+                String fullResult = result != null ? result : "";
+                log.info("[ToolExecutor] Tool {} is returnDirect; bypassing spill/truncate, " +
+                        "broadcasting tool_direct_result ({} chars)", toolName, rawLen);
+                directOutputs.add(new DirectToolOutput(
+                        pc.toolCall.id(), toolName, fullResult, System.currentTimeMillis()));
+                GraphEventPublisher.GraphEvent directEvent =
+                        GraphEventPublisher.toolDirectResult(pc.toolCall.id(), toolName, fullResult);
+                events.add(directEvent);
+                if (streamTracker != null) {
+                    streamTracker.broadcastObject(pc.conversationId,
+                            GraphEventPublisher.EVENT_TOOL_DIRECT_RESULT, directEvent.data());
+                    streamTracker.updateRunningTool(pc.conversationId, null);
+                }
+                // Placeholder keeps the tool_call_id ↔ tool_response pairing valid
+                // for OpenAI-compatible providers, while withholding the data from
+                // any subsequent LLM round (the graph won't take a next round —
+                // see ObservationDispatcher RETURN_DIRECT_TRIGGERED branch).
+                return new ToolResponseMessage.ToolResponse(
+                        pc.toolCall.id(), toolName, DIRECT_TOOL_PLACEHOLDER);
+            }
+
+            // RFC-008 Phase 3 Layer 2: spill oversized results to disk and replace
+            // with preview + path. Falls back to truncation when spilling is
+            // disabled or fails. Spill preserves the full output (read_file can
+            // retrieve it); truncation discards the tail.
+            if (resultStorage != null && result != null) {
+                result = resultStorage.persistIfOversized(
+                        result, toolName, pc.toolCall.id(), pc.conversationId, pc.workspaceBasePath);
+            }
             result = truncateToolResult(result, MAX_TOOL_RESULT_CHARS);
             log.info("[ToolExecutor] Tool {} returned {} chars{}", toolName, rawLen,
-                    result != null && result.length() < rawLen ? " (truncated to " + result.length() + ")" : "");
-            events.add(GraphEventPublisher.toolComplete(toolName, result, true));
+                    result != null && result.length() < rawLen ? " (now " + result.length() + " after spill/truncate)" : "");
+            events.add(GraphEventPublisher.toolComplete(pc.toolCall.id(), toolName, result, true));
             if (streamTracker != null) {
                 streamTracker.broadcastObject(pc.conversationId, GraphEventPublisher.EVENT_TOOL_COMPLETE,
-                        GraphEventPublisher.toolComplete(toolName, result, true).data());
+                        GraphEventPublisher.toolComplete(pc.toolCall.id(), toolName, result, true).data());
                 streamTracker.updateRunningTool(pc.conversationId, null);
             }
             return new ToolResponseMessage.ToolResponse(
                     pc.toolCall.id(), toolName, result != null ? result : "");
         } catch (Exception e) {
             log.error("[ToolExecutor] Tool {} execution failed: {}", toolName, e.getMessage(), e);
-            String normalizedError = normalizeToolExecutionError(e);
-            events.add(GraphEventPublisher.toolComplete(toolName, normalizedError, false));
+            // RFC-052: for returnDirect tools, even the error message is
+            // suspect — exception text may carry stack traces, SQL fragments,
+            // or other sensitive substrings that should not enter LLM context.
+            // Emit a generic placeholder instead. Full error still goes to logs
+            // for operator diagnosis.
+            String reportedError = isReturnDirect(pc.callback)
+                    ? "Tool execution failed (details withheld per returnDirect policy)"
+                    : normalizeToolExecutionError(e);
+            events.add(GraphEventPublisher.toolComplete(pc.toolCall.id(), toolName, reportedError, false));
             if (streamTracker != null) {
                 streamTracker.broadcastObject(pc.conversationId, GraphEventPublisher.EVENT_TOOL_COMPLETE,
-                        GraphEventPublisher.toolComplete(toolName, normalizedError, false).data());
+                        GraphEventPublisher.toolComplete(pc.toolCall.id(), toolName, reportedError, false).data());
                 streamTracker.updateRunningTool(pc.conversationId, null);
             }
             return new ToolResponseMessage.ToolResponse(
-                    pc.toolCall.id(), toolName, normalizedError);
+                    pc.toolCall.id(), toolName, reportedError);
         }
     }
 
@@ -464,7 +699,7 @@ public class ToolExecutionExecutor {
 
             if (evaluation.shouldBlock()) {
                 log.warn("[ToolExecutor] Tool call BLOCKED: tool={}, summary={}", toolName, evaluation.summary());
-                events.add(GraphEventPublisher.toolComplete(toolName, evaluation.summary(), false));
+                events.add(GraphEventPublisher.toolComplete(toolCall.id(), toolName, evaluation.summary(), false));
                 return GuardDecision.blocked(
                         "[安全拦截] " + evaluation.summary() + "。请使用更安全的替代方案。");
             }
@@ -483,7 +718,7 @@ public class ToolExecutionExecutor {
 
             if (guardResult.isBlocked()) {
                 log.warn("[ToolExecutor] Tool call BLOCKED by ToolGuard: tool={}, reason={}", toolName, guardResult.reason());
-                events.add(GraphEventPublisher.toolComplete(toolName, guardResult.reason(), false));
+                events.add(GraphEventPublisher.toolComplete(toolCall.id(), toolName, guardResult.reason(), false));
                 return GuardDecision.blocked(
                         "[安全拦截] " + guardResult.reason() + "。请使用更安全的替代方案。");
             }
@@ -504,9 +739,33 @@ public class ToolExecutionExecutor {
     // ==================== 辅助方法 ====================
 
     /**
-     * 判断工具是否并发安全
+     * RFC-052: a tool is "direct" when its {@link ToolCallback#getToolMetadata()}
+     * reports {@code returnDirect=true}. {@code @Tool(returnDirect=true)} maps
+     * here automatically; MCP tools rely on the
+     * {@code ReturnDirectMcpToolCallback} decorator to override the metadata
+     * (the upstream {@code SyncMcpToolCallback} returns the framework default
+     * of {@code false}).
+     */
+    private static boolean isReturnDirect(ToolCallback callback) {
+        try {
+            return callback.getToolMetadata() != null
+                    && callback.getToolMetadata().returnDirect();
+        } catch (Exception e) {
+            log.debug("[ToolExecutor] Failed to read returnDirect metadata: {}", e.getMessage());
+            return false;
+        }
+    }
+
+    /**
+     * Returns true when the tool can run in parallel with other safe tools.
+     * Consults the registry first (annotation-driven, populated at startup);
+     * falls back to the legacy hardcoded set for callers built without a
+     * registry (legacy constructor / unit tests).
      */
     private boolean isConcurrencySafe(String toolName) {
+        if (concurrencyRegistry != null && concurrencyRegistry.isUnsafe(toolName)) {
+            return false;
+        }
         return !DEFAULT_UNSAFE_TOOLS.contains(toolName);
     }
 
@@ -526,8 +785,20 @@ public class ToolExecutionExecutor {
                 || lower.contains("unexpected character escape sequence")
                 || lower.contains("json parse error")
                 || lower.contains("malformed json")) {
-            return "Tool execution failed: model generated invalid JSON for tool arguments. "
-                    + "或在字符串转义位置被截断。请改为分步骤写入，拆成多个文件，或缩小单次 write_file/edit_file 的内容后重试。";
+            // Truncated tool_call args — typically from max_tokens being hit while
+            // streaming a large `content` field (e.g. renderDocx with 7000+ char
+            // markdown body). The fix MUST come from the model: re-emit the same
+            // tool call with smaller content per call, OR split the work across
+            // multiple sequential tool calls. We tell the LLM directly so the
+            // next reasoning iteration knows what to do — without this, models
+            // tend to fall back to narrating the result as final_answer text.
+            return "Tool execution failed: your tool_call arguments JSON was truncated mid-stream "
+                    + "(very likely you hit max_tokens while emitting a long content field). "
+                    + "Action required: re-call the SAME tool now in your next response, but "
+                    + "(1) make the content field shorter, OR (2) split the work into multiple "
+                    + "sequential tool calls (e.g. write the doc in 2-3 chunks via separate calls). "
+                    + "Do NOT describe the result as text — you must call the tool again to actually "
+                    + "produce the output.";
         }
 
         if (lower.contains("access denied") && lower.contains("path outside allowed directories")) {
@@ -556,7 +827,8 @@ public class ToolExecutionExecutor {
             int resultIndex,
             String conversationId,
             String requesterId,
-            String workspaceBasePath
+            String workspaceBasePath,
+            ChatOrigin origin
     ) {}
 
     private record ApprovalBarrier(String pendingId, String toolName) {}
@@ -594,6 +866,25 @@ public class ToolExecutionExecutor {
             /** 审批 pending ID（如果 awaitingApproval=true） */
             String pendingId,
             /** 触发审批 barrier 的工具名（如果 awaitingApproval=true） */
-            String barrierToolName
-    ) {}
+            String barrierToolName,
+            /**
+             * RFC-052: full-text outputs from any returnDirect tools that ran
+             * in this batch. Non-empty list ⇒ graph must short-circuit to
+             * FinalAnswerNode without re-entering the LLM.
+             */
+            List<DirectToolOutput> directOutputs
+    ) {
+        /** Backwards-compatible constructor for callers that don't track direct outputs. */
+        public ToolExecutionResult(List<ToolResponseMessage.ToolResponse> responses,
+                                    List<GraphEventPublisher.GraphEvent> events,
+                                    boolean awaitingApproval,
+                                    String pendingId,
+                                    String barrierToolName) {
+            this(responses, events, awaitingApproval, pendingId, barrierToolName, List.of());
+        }
+
+        public boolean hasDirectOutputs() {
+            return directOutputs != null && !directOutputs.isEmpty();
+        }
+    }
 }
